--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,32 +1,32 @@
-name: google_maps_flutter
-description: A Flutter plugin for integrating Google Maps in iOS and Android applications.
-repository: https://github.com/flutter/plugins/tree/main/packages/google_maps_flutter/google_maps_flutter
-issue_tracker: https://github.com/flutter/flutter/issues?q=is%3Aissue+is%3Aopen+label%3A%22p%3A+maps%22
-version: 2.1.8
+name: google_maps_flutter_example
+description: Demonstrates how to use the google_maps_flutter plugin.
+publish_to: none
 
 environment:
   sdk: ">=2.14.0 <3.0.0"
   flutter: ">=2.8.0"
 
-flutter:
-  plugin:
-    platforms:
-      android:
-        package: io.flutter.plugins.googlemaps
-        pluginClass: GoogleMapsPlugin
-      ios:
-        pluginClass: FLTGoogleMapsPlugin
-
 dependencies:
+  cupertino_icons: ^0.1.0
   flutter:
     sdk: flutter
   flutter_plugin_android_lifecycle: ^2.0.1
-  google_maps_flutter_platform_interface: ^2.2.0
+  google_maps_flutter:
+    # When depending on this package from a real application you should use:
+    #   google_maps_flutter: ^x.y.z
+    # See https://dart.dev/tools/pub/dependencies#version-constraints
+    # The example app is bundled with the plugin so we use a path dependency on
+    # the parent directory to use the current plugin's version.
+    path: ../
 
 dev_dependencies:
-  flutter_test:
+  espresso: ^0.1.0+2
+  flutter_driver:
+    sdk: flutter
+  integration_test:
     sdk: flutter
 
-  pedantic: ^1.10.0
-  plugin_platform_interface: ^2.0.0
-  stream_transform: ^2.0.0
+flutter:
+  uses-material-design: true
+  assets:
+    - assets/
